dotproject CHANGELOG (insert latest entries at the top)

11 September 2002 (AJE):
-----------------------------
module/dosql/addfile.php
- declared $woodarr explicitly as this would error in the while array

module/files/index.php
- change user id to the full user name

modules/tasks/view.php
- change link to addfile to reference file_task rather than file_id

5 September 2002 (AJE):
-----------------------------
modules/calendar/day_view.php
- added breadcrumb to week view
- tidied code

modules/calendar/week_view.php
- fixed bug in table
- linked actual day hyperlink to day view
- tidied code

4 September 2002 (AJE):
-----------------------------
includes/leftnav.php
- removed legacy code (form wrapping the main table)

3 September 2002 (AJE):
-----------------------------
modules/tasks/view.php
- fixed a broken link to the project in the breadcrumbs

2 September 2002 (AJE):
-----------------------------
Fixed up the order of this log (my mistake, call it a sourthern hemi-sphere thing)

modules/admin/index.php
modules/admin/permissions.php
modules/admin/addedituser.php
modules/admin/viewuser.php
- upgraded permissions

./calendar.php
modules/projects/addedit.php
- fixed a bug in the month and day select boxes

30 August 2002 (AJE):
-----------------------------
dosql/addeditTask.php
- fixed miss-spelt task_end_date variable

includes/create_new_menu.php
- added missing TR tag

modules/admin/permissions.php
- added calendar to module list

modules/tasks/view.php
- added project_id var (otherwise create new task fails in this view?? was working)
- fixed return page (form action attribute) for update task

modules/functions/calendar_func.php
modules/calendar/index.php
modules/calendar/addedit.php
modules/calendar/dayview.php
- added permissions

25 August 2002 (AJE):
-----------------------------
Extended permissions to tasks

./index.php
- delete assignment of cookie_project (redundant)

function/tasks_func.php