@@ -1,8 +1,26 @@
+<?php
+
+// check permissions
+$denyRead = getDenyRead( $m );
+$denyEdit = getDenyEdit( $m );
+
+if ($denyRead) {
+	echo '<script language="javascript">
+	window.location="./index.php?m=help&a=access_denied";
+	</script>
+';
+}
+?>
+
 <TABLE width="95%" border=0 cellpadding="0" cellspacing=1>
 	<TR>
 	<TD valign="top"><img src="./images/icons/ticketsmith.gif" alt="" border="0" width=42 height=42></td>
 		<TD nowrap><span class="title">Trouble Ticket Management</span></td>
-		<TD valign="top" align="right" width="100%"></td>
+		<TD align="right" width="100%">
+		<?php if (!$denyEdit) { ?>
+			<input type="button" class=button value="new ticket" onClick="javascript:window.location='./index.php?m=ticketsmith&a=post_ticket';">
+		<?php } ?>
+		</td>
 	</tr>
 </TABLE>
 <?php
